[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "*"
scraper = "*"
tokio = { version = "*", features = ["full"] }
structopt = "*"
cssparser = "*"
kuchiki = "*"
selectors = "*"
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "*"
chrono = "*"
rand = "*"
colored = "*"